# spooky_jam_2024

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  index.html  notes.md  run_wasm.sh  theramin.vital
.cargo/: config.toml
art/: basic.blend  basic.blend1  blocks.blend
assets/: registry.json
assets/blocks/: basic.blend  basic.glb
assets/blueprints/: Anchor.glb
assets/levels/: World.glb  World.meta.ron
assets/shaders/: lightning.wgsl
music/: music.bwproject
src/: block.rs  block_pool.rs  build_phase.rs  crow.rs  decay_phase.rs  environmental_decoration.rs  main.rs  music.rs  scoring_phase.rs
wasm/: index.html  style.css
