[package]
name = "spooky_jam"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"



[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking", "file_watcher"] }
bevy-inspector-egui = "0.26.0"
bevy_hanabi = "0.12.2"
bevy_mod_picking = "0.20.1"
blenvy = { path = "/home/alec/Code/Vendor/Blenvy/crates/blenvy" }
fastrand = "2.1.1"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
