[package]
name = "spooky_jam"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"



[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking", "jpeg"] }
bevy-inspector-egui = "0.26.0"
bevy_mod_picking = "0.20.1"
bevy_particle_systems = "0.13.0"
blenvy = { path = "/home/alec/Code/Vendor/Blenvy/crates/blenvy" }
fastrand = "2.1.1"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
parry3d = "0.17.1"
serde_json = "1.0.128"
