[package]
name = "spooky_jam"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"



[dependencies]
bevy = { version = "0.14.2", default-features = false, features = [
"dynamic_linking", "jpeg", "file_watcher",
  "animation",
  "bevy_asset",
  "bevy_state",
  "bevy_color",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_gltf",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "multi_threaded",
  "png",
  "hdr",
  "vorbis",
  "x11",
  "bevy_gizmos",
  "android_shared_stdcxx",
  "tonemapping_luts",
  "smaa_luts",
  "default_font",
  "webgl2",
  "sysinfo_plugin",
] }
bevy-inspector-egui = "0.26.0"
bevy_kira_audio = "0.20.0"
bevy_mod_picking = "0.20.1"
bevy_particle_systems = "0.13.0"
blenvy = { path = "/home/alec/Code/Vendor/Blenvy/crates/blenvy" }
fastrand = "2.1.1"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
ordered-float = "4.3.0"
parry3d = "0.17.1"
serde_json = "1.0.128"
